Fixed spacing between sections on mobile

--- a/Landing/src/sections/Contacts/Contacts.css
+++ b/Landing/src/sections/Contacts/Contacts.css
@@ -3,8 +3,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: center;
-    align-items: center;
 }
 .contacts__symbol {
    width: 100%;
@@ -118,6 +116,20 @@
  }
 
  @media (max-width: 576px) {
+   .contacts__upper-side {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 1%;
+      width: 90vw;
+      height: auto;
+  }
+  .contacts__symbol {
+      width: 20%;
+      position: relative;
+      right: 5vw;
+  }
    #contact-form {
       width: 80%;
    }
