--- a/Landing/src/sections/Experiences/Experiences.css
+++ b/Landing/src/sections/Experiences/Experiences.css
@@ -74,6 +74,9 @@
 }
 
 @media (max-width: 576px) {
+    .experiences__container {
+        margin-top: 10vh;
+    }
     .experiences__upper-side {
         margin: 0;
         padding: 0;
